kubernetes/23-scheduler-journal-client.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-journal-client
  labels:
    app: scheduler-journal-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler-journal-client
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: scheduler-journal-client
    spec:
      containers:
      - name: scheduler-journal-client
        image: swh/scheduler:latest
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint.sh
            readOnly: true
        resources:
          requests:
            memory: "50Mi"
            cpu: "10m"
          limits:
            memory: "100Mi"
            cpu: "50m"
      volumes:
        - name: config
          configMap:
            name: scheduler-journal-client
            defaultMode: 0777
