kubernetes/40-loaders.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loaders
  labels:
    app: loaders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loaders
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: loaders
    spec:
      containers:
      - name: loaders
        image: swh/loaders:latest
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        ports:
        - containerPort: 5002
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "3000Mi"
            cpu: "1200m"
        lifecycle:
          preStop:
           exec:
             command: ["kill", "1"]
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint.sh
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: loaders
            defaultMode: 0777
