kubernetes/56-search-journal-client.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-journal-client-objects
  labels:
    app: search-journal-client-objects
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-journal-client-objects
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: search-journal-client-objects
    spec:
      containers:
      - name: search-journal-client-objects
        image: swh/search:latest
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config-journal-client-objects.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint-journal-client-objects.sh
            readOnly: true
        resources:
          requests:
            memory: "50Mi"
            cpu: "20m"
          limits:
            memory: "100Mi"
            cpu: "100m"
      volumes:
        - name: config
          configMap:
            name: search-journal-client
            defaultMode: 0777
