kubernetes/62-counters-journal-client.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counters-journal-client
  labels:
    app: counters-journal-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counters-journal-client
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: counters-journal-client
    spec:
      containers:
      - name: counters-journal-client
        image: swh/counters:latest
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint.sh
            readOnly: true
        resources:
          requests:
            memory: "100Mi"
            cpu: "20m"
          limits:
            memory: "150Mi"
            cpu: "100m"
      volumes:
        - name: config
          configMap:
            name: counters-journal-client
            defaultMode: 0777
