kubernetes/72-indexers.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexers
  labels:
    app: indexers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indexers
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: indexers
    spec:
      containers:
      - name: indexers
        image: swh/indexers:latest
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        ports:
        - containerPort: 5002
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "1024Mi"
            cpu: "800m"
        lifecycle:
          preStop:
           exec:
             command: ["kill", "1"]
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint.sh
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: indexers
            defaultMode: 0777
