kubernetes/73-indexer-journal-client.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer-journal-client
  labels:
    app: indexer-journal-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indexer-journal-client
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: indexer-journal-client
    spec:
      containers:
      - name: indexer-journal-client
        image: swh/indexers:latest
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config-journal-client.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint-journal-client.sh
            readOnly: true
        resources:
          requests:
            memory: "50Mi"
            cpu: "20m"
          limits:
            memory: "100Mi"
            cpu: "100m"
      volumes:
        - name: config
          configMap:
            name: indexer-journal-client
            defaultMode: 0777
