kubernetes/29-web-db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-db
  labels:
    app: web-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-db
  template:
    metadata:
      labels:
        app: web-db
    spec:
      containers:
      - name: web-db
        image: postgres:13.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        args:
          - "-c"
          - "shared_buffers=128MB"
          - "-c"
          - "effective_cache_size=128MB"
          - "-c"
          - "random_page_cost=1.5"
          - "-c"
          - "max_wal_size=128MB"
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: web-db-pvc
        resources:
          requests:
            memory: "50Mi"
            cpu: "10m"
          limits:
            memory: "100Mi"
            cpu: "50m"
      volumes:
        - name: web-db-pvc
          persistentVolumeClaim:
            claimName: web-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: web-db
spec:
  type: ClusterIP
  selector:
    app: web-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: web-db-dev
spec:
  type: NodePort
  selector:
    app: web-db
  ports:
    - port: 5437
      targetPort: 5432  # internal port of the service
