kubernetes/50-elasticsearch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: elasticsearch:7.9.3
          imagePullPolicy: Always
          ports:
            - containerPort: 9200
          resources:
            requests:
              memory: "768Mi"
              cpu: "50m"
            limits:
              memory: "2048Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: "/data"
              name: elasticsearch-data-pvc
          readinessProbe:
            httpGet:
              path: /
              port: 9200
              scheme: "HTTP"
            failureThreshold: 5
            periodSeconds: 1
          startupProbe:
            httpGet:
              path: /
              port: 9200
              scheme: "HTTP"
            initialDelaySeconds: 5
            failureThreshold: 60
            periodSeconds: 2
      volumes:
        - name: elasticsearch-data-pvc
          persistentVolumeClaim:
            claimName: elasticsearch-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  type: ClusterIP
  selector:
    app: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
