kubernetes/70-idx-storage-db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idx-storage-db
  labels:
    app: idx-storage-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idx-storage-db
  template:
    metadata:
      labels:
        app: idx-storage-db
    spec:
      containers:
      - name: idx-storage-db
        image: postgres:13.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        args:
          - "-c"
          - "shared_buffers=256MB"
          - "-c"
          - "effective_cache_size=256MB"
          - "-c"
          - "random_page_cost=1.5"
          - "-c"
          - "max_wal_size=256MB"
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: idx-storage-db-pvc
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
      volumes:
        - name: idx-storage-db-pvc
          persistentVolumeClaim:
            claimName: idx-storage-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: idx-storage-db
spec:
  type: ClusterIP
  selector:
    app: idx-storage-db
  ports:
    - port: 5432
      targetPort: 5432
