kubernetes/02-monitoring.yml
# -------
# Prometheus statsd exporter configuration
# -------
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-statsd-exporter
  labels:
    app: prometheus-statsd-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-statsd-exporter
  template:
    metadata:
      labels:
        app: prometheus-statsd-exporter
    spec:
      containers:
      - name: prometheus-statsd-exporter
        image: prom/statsd-exporter
        imagePullPolicy: Always
        args:
          - "--statsd.mapping-config=/etc/prometheus/statsd-mapping.yml"
        ports:
        - containerPort: 9125
        volumeMounts:
          - name: config
            mountPath: /etc/prometheus/statsd-mapping.yml
            subPath: config.yml
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: prometheus-statsd-exporter
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-statsd-exporter
spec:
  type: ClusterIP
  selector:
    app: prometheus-statsd-exporter
  ports:
    - name: statsd
      port: 9125
      targetPort: 9125
    - name: http
      port: 9102
      targetPort: 9102
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
  - host: prometheus.default
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port: 
              number: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus
        imagePullPolicy: Always
        args:
          - "--config.file=/etc/prometheus/prometheus.yml"
        ports:
        - containerPort: 9090
        volumeMounts:
          - name: config
            mountPath: /etc/prometheus/prometheus.yml
            subPath: config.yml
            readOnly: true
          - mountPath: "/prometheus/data"
            name: prometheus-pvc
        resources:
          requests:
            cpu: "20m"
            memory: "100Mi"
          limits:
            cpu: "100m"
            memory: "256Mi"
      volumes:
        - name: config
          configMap:
            name: prometheus
        - name: prometheus-pvc
          persistentVolumeClaim:
            claimName: prometheus-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
  - host: grafana.default
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port: 
              number: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: swh/grafana
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "100m"
            memory: "256Mi"
        volumeMounts:
          - mountPath: "/var/lib/grafana"
            name: grafana-pvc
      volumes:
        - name: grafana-pvc
          persistentVolumeClaim:
            claimName: grafana-pvc
