kubernetes/11-storage.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage
  labels:
    app: storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
      - name: storage
        image: swh/storage:latest
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        ports:
        - containerPort: 5002
        volumeMounts:
          - name: db-password
            mountPath: /run/secrets/postgres-password
            subPath: POSTGRES_PASSWORD
            readOnly: true
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint.sh
            readOnly: true
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
      volumes:
        - name: config
          configMap:
            name: storage
            defaultMode: 0777
        - name: db-password
          secret:
            secretName: storage-db
---
apiVersion: v1
kind: Service
metadata:
  name: storage
spec:
  type: ClusterIP
  selector:
    app: storage
  ports:
    - port: 5002
      targetPort: 5002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage
spec:
  rules:
  - host: storage.default
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storage
            port:
              number: 5002
