kubernetes/20-scheduler.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  labels:
    app: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
      - name: scheduler
        image: swh/scheduler:latest
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        ports:
        - containerPort: 5008
        volumeMounts:
          - name: db-password
            mountPath: /run/secrets/postgres-password
            subPath: POSTGRES_PASSWORD
            readOnly: true
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint.sh
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: scheduler
            defaultMode: 0777
        - name: db-password
          secret:
            secretName: scheduler-db
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler
spec:
  type: ClusterIP
  selector:
    app: scheduler
  ports:
    - port: 5008
      targetPort: 5008
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scheduler
spec:
  rules:
  - host: scheduler.default
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scheduler
            port:
              number: 5008
