kubernetes/21-scheduler-runner.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-runner
  labels:
    app: scheduler-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler-runner
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: scheduler-runner
    spec:
      containers:
      - name: scheduler-runner
        image: swh/scheduler:latest
        imagePullPolicy: Always
        command:
        - /entrypoint.sh
        ports:
        - containerPort: 5008
        resources:
          requests:
            cpu: "50m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint.sh
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: scheduler-runner
            defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler-runner
spec:
  type: ClusterIP
  selector:
    app: scheduler-runner
  ports:
    - port: 5008
      targetPort: 5008
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scheduler-runner
spec:
  rules:
  - host: scheduler-runner.default
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scheduler-runner
            port:
              number: 5008
