kubernetes/55-search.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  labels:
    app: search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
      - name: search
        image: swh/search:latest
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        ports:
          - containerPort: 5010
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint.sh
            readOnly: true
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "200Mi"
            cpu: "100m"
      volumes:
        - name: config
          configMap:
            name: search
            defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  name: search
spec:
  type: ClusterIP
  selector:
    app: search
  ports:
    - port: 5010
      targetPort: 5010
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search
spec:
  rules:
  - host: search.default
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: search
            port:
              number: 5010
