kubernetes/61-counters.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counters
  labels:
    app: counters
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counters
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: counters
    spec:
      containers:
        - name: counters
          image: swh/counters:latest
          imagePullPolicy: Always
          command:
            - /entrypoint.sh
          ports:
            - containerPort: 5011
          readinessProbe:
            httpGet:
              path: /
              port: 5011
              scheme: "HTTP"
            initialDelaySeconds: 0
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 5011
              scheme: "HTTP"
            initialDelaySeconds: 5
            failureThreshold: 30
            periodSeconds: 1
          volumeMounts:
            - name: config
              mountPath: /etc/softwareheritage/config.yml
              subPath: config.yml
              readOnly: true
            - name: config
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
              readOnly: true
          resources:
            requests:
              memory: "75Mi"
              cpu: "20m"
            limits:
              memory: "150Mi"
              cpu: "200m"
      volumes:
        - name: config
          configMap:
            name: counters
            defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  name: counters
spec:
  type: ClusterIP
  selector:
    app: counters
  ports:
    - port: 5011
      targetPort: 5011
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counters
spec:
  rules:
    - host: counters.default
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counters
                port:
                  number: 5011
