kubernetes/71-idx-storage.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idx-storage
  labels:
    app: idx-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idx-storage
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: idx-storage
    spec:
      containers:
      - name: idx-storage
        image: swh/indexers:latest
        imagePullPolicy: Always
        command:
          - /entrypoint.sh
        ports:
        - containerPort: 5007
        readinessProbe:
          httpGet:
            path: /
            port: 5007
            scheme: "HTTP"
          initialDelaySeconds: 0
          failureThreshold: 2
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /
            port: 5007
            scheme: "HTTP"
          initialDelaySeconds: 5
          failureThreshold: 30
          periodSeconds: 1
        volumeMounts:
          - name: db-password
            mountPath: /run/secrets/postgres-password
            subPath: POSTGRES_PASSWORD
            readOnly: true
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: config
            mountPath: /entrypoint.sh
            subPath: entrypoint.sh
            readOnly: true
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
          limits:
            memory: "1536Mi"
            cpu: "300m"
      volumes:
        - name: config
          configMap:
            name: idx-storage
            defaultMode: 0777
        - name: db-password
          secret:
            secretName: idx-storage-db
---
apiVersion: v1
kind: Service
metadata:
  name: idx-storage
spec:
  type: ClusterIP
  selector:
    app: idx-storage
  ports:
    - port: 5007
      targetPort: 5007
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idx-storage
spec:
  rules:
  - host: idx-storage.default
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: idx-storage
            port:
              number: 5007
