kubernetes/91-deposit.yml
---
apiVersion: v1
kind: Service
metadata:
  name: deposit
spec:
  selector:
    app: deposit
  ports:
    - port: 5006
      targetPort: 5006
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deposit
  labels:
    name: deposit
spec:
  rules:
    - host: deposit.default
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: deposit
                port:
                  number: 5006
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deposit
spec:
  selector:
    matchLabels:
      app: deposit
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      labels:
        app: deposit
    spec:
      containers:
        - name: deposit
          image: swh/deposit:latest
          imagePullPolicy: Always
          command:
            - /entrypoint.sh
          readinessProbe:
            httpGet:
              path: /
              port: 5006
              scheme: "HTTP"
            initialDelaySeconds: 0
            failureThreshold: 2
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 5006
              scheme: "HTTP"
            initialDelaySeconds: 5
            failureThreshold: 30
            periodSeconds: 1
          resources:
            requests:
              memory: "196Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "512m"
          ports:
            - containerPort: 5006
          volumeMounts:
            - name: config
              mountPath: /etc/softwareheritage/config.yml
              subPath: config.yml
              readOnly: true
            - name: config
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
              readOnly: true
            - name: deposit-cache-pvc
              mountPath: /srv/softwareheritage/deposit-archive/
      volumes:
        - name: config
          configMap:
            name: deposit
            defaultMode: 0777
        - name: db-password
          secret:
            secretName: deposit-db
        - name: deposit-cache-pvc
          persistentVolumeClaim:
            claimName: deposit-cache-pvc
